compiler/src/test/resources/golden/errors/suggest_ctor.dawn
type Shape = | Circle(r: Float) | Square(s: Float)

fn f() -> Shape = Cirle(1.0)
