compiler/src/test/resources/golden/errors/suggest_ctor.err
error: undefined constructor: Cirle
  --> suggest_ctor.dawn:3:19
  |
3 | fn f() -> Shape = Cirle(1.0)
  |                   ^^^^^
  = hint: did you mean `Circle`?
